<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:ignore="MissingDefaultResource">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainglTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainglBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainglLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainglRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/videoCl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:ignore="UseAppTint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:elevation="8dp"
            android:background="@color/semitransparent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:id="@+id/titleTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="Game of Thrones"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:maxLines="1"
                android:ellipsize="end"
                android:padding="4dp"
                android:elevation="8dp"
                app:layout_constraintEnd_toStartOf="@+id/minScreenIv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>


            <ImageView
                android:id="@+id/settingsIv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:elevation="8dp"
                android:src="@drawable/settings64px"
                android:contentDescription="@string/settings"
                android:tint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>



            <ImageView
                android:id="@+id/listMode"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="20dp"
                android:elevation="8dp"
                android:src="@drawable/menu64px"
                android:contentDescription="@string/list"
                android:tint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/settingsIv"/>

            <ImageView
                android:id="@+id/minScreenIv"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="20dp"
                android:elevation="8dp"
                android:src="@drawable/minscreen64px"
                android:contentDescription="@string/min_screen"
                android:tint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/listMode"/>

        </androidx.constraintlayout.widget.ConstraintLayout>




        <RelativeLayout
            android:id="@+id/fastBackwardRl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:background="@drawable/dimcircle_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/playIv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/backwardIv"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:src="@drawable/fastbackward128px"
                android:contentDescription="@string/fast_backward"
                android:tint="@color/white"/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/playIv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:elevation="8dp"
            android:src="@android:drawable/ic_media_pause"
            android:contentDescription="@string/play"
            app:layout_constraintEnd_toStartOf="@+id/fastForwardRl"
            app:layout_constraintStart_toEndOf="@+id/fastBackwardRl"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <RelativeLayout
            android:id="@+id/fastForwardRl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:background="@drawable/dimcircle_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/playIv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/forwardIv"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:src="@drawable/fastforward128px"
                android:contentDescription="@string/fast_forward"
                android:tint="@color/white"/>
        </RelativeLayout>

        <SeekBar
            android:id="@+id/playerSBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="8dp"
            style="@style/CustomSeekBar"
            android:splitTrack="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/playerTimingTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:maxLines="1"
            android:text="16:11:12"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/playerSBar"/>

        <ImageView
            android:id="@+id/fullScreenIv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="25dp"
            android:padding="2dp"
            android:elevation="8dp"
            android:src="@drawable/fullscreen128px"
            android:contentDescription="@string/max_screen"
            android:tint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/playerSBar"/>

        <com.google.android.exoplayer2.ui.StyledPlayerView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:use_controller="false"
            app:show_buffering="never"
            android:keepScreenOn="true"/>

        <View
            android:id="@+id/touchOverlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:orientation="vertical"
        android:elevation="15dp"
        android:background="@color/semitransparent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/mainglLeft"
        app:layout_constraintEnd_toStartOf="@+id/mainglRight"

        >
        <RelativeLayout
            android:id="@+id/rlClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="end"
            android:elevation="8dp"
            android:background="@drawable/dimcircle_bg"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/closeIv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:src="@drawable/closeblack64px"
                android:contentDescription="@string/close"
                android:layout_gravity="end"
                android:tint="@color/white"
                tools:ignore="UseAppTint" />
        </RelativeLayout>




        <TextView
            android:id="@+id/tvSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="top"
            android:text="More Like This"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />






        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="#C9D6CF"
            app:layout_constraintTop_toBottomOf="@+id/rlClose"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/recVMovies"
            app:layout_constraintTop_toBottomOf="@+id/view"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>