<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".presentation.view.ActorScreenFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainglTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainglBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainglLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mainglRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/backIv"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:padding="2dp"
                    android:src="@drawable/backgrey64px"
                    android:contentDescription="@string/back"
                    android:tint="@color/white"
                    android:elevation="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="UseAppTint" />

                <TextView
                    android:id="@+id/actorNameTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="Sam Worthington"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:padding="2dp"
                    android:elevation="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/actorScreenIv1"
                    android:layout_width="@dimen/dimens_100"
                    android:layout_height="@dimen/dimens_100"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/samworthington"
                    android:contentDescription="@string/actor_photo_description"
                    android:elevation="2dp"
                    app:layout_constraintBottom_toTopOf="@+id/actorDescTv"
                    app:layout_constraintTop_toBottomOf="@+id/actorNameTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <TextView
                    android:id="@+id/actorDescTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:text="Actor, Producer, Writer"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/iconColor"
                    android:elevation="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/llActions"
                    app:layout_constraintTop_toBottomOf="@+id/actorScreenIv1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_300"
                    android:elevation="1dp"
                    android:background="@drawable/full_gradient"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/actorScreenIv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_300"
                    android:src="@drawable/samworthington"
                    android:contentDescription="@string/actor_photo_description"
                    android:scaleType="centerCrop"
                    tools:ignore="MissingConstraints"
                    />

                <LinearLayout
                    android:id="@+id/llActions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent">




                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:background="@drawable/lgblackcircle_bg"
                        >

                        <ImageView
                            android:id="@+id/ivInstagram"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:padding="2dp"
                            android:elevation="8dp"
                            android:src="@drawable/instagram512px"
                            android:contentDescription="@string/insta"
                            android:tint="@color/bluemain"
                            tools:ignore="UseAppTint" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:background="@drawable/lgblackcircle_bg"
                        >

                        <ImageView
                            android:id="@+id/ivFacebook"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:padding="2dp"
                            android:elevation="8dp"
                            android:src="@drawable/facebook512px"
                            android:contentDescription="@string/fb"
                            android:tint="@color/bluemain"
                            tools:ignore="UseAppTint" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:padding="5dp"
                        android:background="@drawable/lgblackcircle_bg"
                        >

                        <ImageView
                            android:id="@+id/ivTwitter"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:padding="2dp"
                            android:elevation="8dp"
                            android:src="@drawable/twitter512px"
                            android:contentDescription="@string/twitter"
                            android:tint="@color/bluemain"
                            tools:ignore="UseAppTint" />

                    </RelativeLayout>

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:tabTextColor="@color/btm_nav_item_txtcolor"
                app:tabIndicatorColor="@color/bluemain"
                app:tabIndicator="@color/iconColor"
                app:tabIndicatorHeight="3dp"
                app:tabIndicatorFullWidth="true"
                android:background="@android:color/transparent">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Filmography"
                    />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Biography"
                    />


            </com.google.android.material.tabs.TabLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="#C9D6CF"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:id="@+id/framelayout"
                />



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>